refactor: update get user handler, add filter
